test/good/functions/nested09.px

class A def
    x: Int

    func f(x: Int): Void def
        func g(y: Int? = null): Int def
            if y is null do
                return 0
            return this.x + x + y! + g()
        print g(2)

A(8).f(3)
