test/bad/functions/call07.px

func f(x: Int = 0) def
    return

f(y=2)
